--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1,34 +1,66 @@
-#maindiv{
-    float: left;
-    width: 60%;
+body{
+    text-align: center;
+    background-image:url(../picture/78.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: rgb(255, 255, 255);
+    padding: 0%;
+    margin: 0%;
+    position: relative;
 }
+
+#main{
+    margin: 0%;
+    padding: 0%;
+}
+
+/* main divs */
 
 #sidediv{
-    float: right;
-    width: 40%;
+    float: left;
+    width: 35%;
+    margin-left: 5%;
+    background-color: rgba(13, 13, 13, 0.9);
+    
 }
 
-#bwrap{
+#maindiv{
     text-align: center;
-    width: 70%;
-    background-color: gray;
-    margin-left:15%;   
+    background-color: rgba(49, 49, 49, 0.54);
+    margin-left:5%;  
+    float: right;
+    width: 50%;
+    margin-right:5%;
 }
+
+/* head divs */
 
 #head{
     height: 23%;
+    margin: 0%;
+    padding: 0%;
+    background-color: rgba(39, 39, 39, 0.9);
 }
 
 #logodiv{
     margin-left: 8%;
     margin-top: 2%;
     float: left;
+    z-index: 1;
+    position: relative;
 }
 
 #headlogo{
     height: 70%;
-    float: left;
+    background-color: aliceblue;
+    border-radius: 50px;
 }
+
+#headtext{
+    
+}
+
+/* bwrap divs */
 
 .button{
     width: 80%;
@@ -41,7 +73,7 @@
     width: 90%;
 }
 
-#bwrap div:first-of-type  div{
+#maindiv div:first-of-type  div{
     float: left;
 }
 
@@ -57,6 +89,12 @@
     width:80%; 
 }
 
+/* other divs */
+
+#table{
+    text-align: center;
+}
+
 table, th, td {
-    border: 1px solid black;
+    border: 4px solid black;
 }
